Fix overlapping colour channels (#38)

--- a/src/styles/atlas.css
+++ b/src/styles/atlas.css
@@ -6,7 +6,7 @@
   width: 100%;
 }
 
-.img-wrapper svg {
+.img-wrapper .static-png {
   position: absolute;
   top: 0;
   left: 0;
